@@ -82,11 +82,15 @@ function _compzillaFrameCommon (content, templateId)
     }
 
     // click to raise
-    frame.addEventListener ("mousedown", {
-                            handleEvent: function (event) {
-				windowStack.moveToTop (frame);
-			    } },
-			    true);
+    frame.addEventListener (
+        "mousedown", 
+        {
+            handleEvent: function (event) {
+        	windowStack.moveToTop (frame);
+            }
+        },
+	true);
+
     return frame;
 }
 
@@ -102,14 +106,15 @@ function CompzillaDockFrame (content)
     return _compzillaFrameCommon (content, "dockFrame");
 }
 
+
 function _connectFrameDragListeners (frame, contentBox)
 {
     var frameDragPosition = new Object ();
     var frameDragMouseMoveListener = {
         handleEvent: function (ev) {
 	    if (frame.originalOpacity == undefined) {
-		frame.originalOpacity = frame.style.opacity
-		    frame.style.opacity = "0.8";
+		frame.originalOpacity = frame.style.opacity;
+		frame.style.opacity = "0.8";
 	    }
 
 	    // figure out the deltas
@@ -119,8 +124,12 @@ function _connectFrameDragListeners (frame, contentBox)
 	    frameDragPosition.x = ev.clientX;
 	    frameDragPosition.y = ev.clientY;
 
-	    // XXX this should be frame.offsetWidth/frame.offsetHeight.  once that's fixed, remove the contentBox parameter
-	    frame.moveResize (contentBox.offsetWidth, contentBox.offsetHeight, frame.offsetLeft + dx, frame.offsetTop + dy);
+	    // XXX this should be frame.offsetWidth/frame.offsetHeight.  once
+	    // that's fixed, remove the contentBox parameter
+	    frame.moveResize (contentBox.offsetWidth, 
+			      contentBox.offsetHeight, 
+			      frame.offsetLeft + dx, 
+			      frame.offsetTop + dy);
 
 	    ev.stopPropagation ();
 	}
@@ -149,6 +158,7 @@ function _connectFrameDragListeners (frame, contentBox)
 	ev.stopPropagation ();
     }
 }
+
 
 function _connectNativeWindowListeners (frame, content) 
 {
